1998-01-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h: Remove some USING tags. 

1998-01-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Widget): Remove setBorderWidth.  Add packToRight.
	(Frame): Change enableRelief to setRelief:. Add setBorderWidth to 
	Frame.
	(Label): Remove anchorEast, anchorWest, colorBlue.
	(ClassDisplayLabel, VarProbeLabel, ClassDisplayHideButton): Added.
	(SuperButton): Add createEnd, setOwner, setUser.
	Add ClassDisplayLabel, VarProbeLabel.

1998-01-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

        * gui.h: New file.